about text overflow fix

--- a/final/styles/about.css
+++ b/final/styles/about.css
@@ -20,6 +20,9 @@ main {
     gap: 20px;
 }
 
+#history-text p {
+    width: 99%;
+}
 
 #aesthetic-grid {
     display: grid;
